# ring-diffusion-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
crates/rdp-crypto/: Cargo.toml
crates/rdp-crypto/src/: bulletproofs.rs  hash.rs  key_image.rs  lib.rs  merkle.rs  pedersen.rs  point.rs  private_tx.rs  ring_signature.rs  scalar.rs  stealth.rs  types.rs
programs/ring-diffusion-protocol/: Cargo.toml
programs/ring-diffusion-protocol/src/: constants.rs  errors.rs  lib.rs
programs/ring-diffusion-protocol/src/crypto/: bulletproofs_verifier.rs  merkle_verifier.rs  mod.rs  ring_verifier.rs  scalar_reduce.rs  types.rs
programs/ring-diffusion-protocol/src/instructions/: deposit.rs  execute_withdraw.rs  execute_withdraw_merkle.rs  initialize_pool.rs  mod.rs  prepare_withdraw.rs  submit_proof.rs  submit_proof_part2.rs  submit_proof_part3.rs  submit_proof_part4.rs  update_merkle_root.rs  update_pool_config.rs  withdraw.rs
programs/ring-diffusion-protocol/src/state/: bulletproof_account.rs  commitment.rs  key_image.rs  mod.rs  pool_config.rs  pool_state.rs  withdraw_request.rs
tests/: check_pdas.ts  check_pool.ts  e2e_six_phase_withdraw.ts  initialize_pool.ts  test_deposit.ts  test_update_merkle_root.ts  update_pool_config.ts  verify_pool.ts
tools/: Cargo.toml
tools/src/: gen_bulletproof.rs  gen_test_data.rs
