[package]
name = "ring-diffusion-protocol"
version = "0.1.0"
description = "Privacy protocol using CLSAG ring signatures and Pedersen commitments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ring_diffusion_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
solana-curve25519 = { version = "4.0", default-features = false }
sha2 = { version = "0.10", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
